--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,12 @@
       {
         "list": "off"
       }
+    ],
+    "axe/keyboard": [
+      "default",
+      {
+        "nested-interactive": "off"
+      }
     ]
   }
 }
